configured webpack for route manifest with webpack-route-manifest

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "customize-cra": "^0.9.1",
-    "react-app-rewired": "^2.1.5"
+    "react-app-rewired": "^2.1.5",
+    "webpack-route-manifest": "^1.1.0"
   }
 }
