--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "express": "^4.17.1",
     "ganalytics": "^3.1.2",
     "quicklink": "^2.0.0-alpha",
     "react": "^16.12.0",
@@ -13,7 +14,8 @@
     "route-manifest": "^1.0.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "node server.js",
+    "dev": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
