--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
+    "dev": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -36,7 +36,6 @@
     ]
   },
   "devDependencies": {
-    "react-app-rewired": "^2.1.5",
     "webpack-route-manifest": "^1.1.0"
   }
 }
